# bernardx

./: .gitignore  .gitmodules  README.md  __init__.lua  package.json  plan.md
api.md/: bt.md  cv2.md  display.md  global.md  http.md  input.md  json.md  lfs.md  resource.md  settings.md  slv.md  system.md  ui-node.md
bernardx/: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  change.md
bernardx-agent/agents/: selector-finder.md
bernardx-agent/libs/agent/: agents.lua  compact.lua  memory.lua  recovery.lua  skills.lua  subagent.lua
bernardx-agent/libs/ai/: openai.lua  utils.lua
bernardx-agent/libs/ai_tools/: todo.lua
bernardx-agent/libs/cdp/: init.lua
bernardx-agent/scripts/common/: ai_decide.lua  check_done.lua  cleanup.lua  execute_action.lua  execute_step.lua  init_cdp.lua  observe.lua  verify.lua
bernardx-agent/src/: common_action.lua  dom_helper.lua  main.lua  test_dom.lua
bernardx/demo/bt_project/scripts/: goodbye.lua  hello.lua  wait_a_bit.lua
bernardx/demo/bt_project/sensors/: hp_sensor.lua
bernardx/demo/bt_project/trees/my_tree/: root.json
bernardx/demo/libs/skills/: attack.lua  heal.lua  scan.lua
bernardx/demo/src/: main.lua
bernardx/docs/: bt_composite_nodes.md  bt_decorators.md  bt_directory_structure.md  bt_leaf_nodes.md  bt_node_config.md  bt_sensors.md  bt_wrapper_nodes.md  lua_api.md  lua_library_guide.md  usage.md
bernardx/src/: main.cc
bernardx/src/bt/: behavior_tree_engine.cc  behavior_tree_engine.h  blackboard.h  blackboard_condition.cc  blackboard_condition.h  bt_event_queue.h  bt_utils.h  composite.cc  composite.h  decorator.h  force_failure.cc  force_failure.h  force_success.cc  force_success.h  inverter.cc  inverter.h  leaf.h  lua_script_host.cc  lua_script_host.h  node.cc  node.h  parallel.cc  parallel.h  random_selector.cc  random_selector.h  random_sequence.cc  random_sequence.h  repeat.cc  repeat.h  retry_until_successful.cc  retry_until_successful.h  script_node.cc  script_node.h  selector.cc  selector.h  sensor.cc  sensor.h  sequence.cc  sequence.h  single_child_node.cc  (+7 more)
bernardx/src/lua/: blackboard_library.cc  blackboard_library.h  bt_library.cc  bt_library.h  code_provider.h  coroutine_pool.cc  coroutine_pool.h  file_system_code_provider.h  fs_library.cc  fs_library.h  http_library.cc  http_library.h  json_library.cc  json_library.h  lua_extension.h  lua_library.h  lua_runtime.cc  lua_runtime.h  lua_types.h  lua_value_utils.h  time_utils.h  timer_manager.cc  timer_manager.h
bernardx/tests/: blackboard_test.cc  bt_test.cc  http_library_test.cc  json_library_test.cc  lua_runtime_test.cc  sensor_test.cc
bernardx/tests/scripts/: bool_args.lua  bt_module.lua  check_reason.lua  counter.lua  fail_immediate.lua  no_args.lua  returns_failure.lua  run_2_then_fail.lua  run_3_ticks.lua  run_5_ticks.lua  runtime_error.lua  sensor_helper.lua  with_args.lua
bernardx/tests/sensors/: basic.lua  counting_a.lua  counting_b.lua  counting_c.lua  counting_d.lua  full_lifecycle.lua  missing_tick.lua  tracking_a.lua  tracking_b.lua  with_require.lua
newtest/: .env  __init__.lua
newtest/agents/: tree-generator.md
newtest/libs/: base_config.lua  cache.lua  chrome.lua  class.lua  common_action.lua  common_net.lua  env.lua  frame.lua  ime.lua  init.lua  iutils.lua  net.lua  openai.lua  proxy.lua  randomlua.lua  system.lua  tablex.lua  utils.lua
newtest/libs/agent/: hooks.lua  init.lua  nd_tools.lua  prompt.lua  util.lua
newtest/libs/ai/: anthropic.lua  init.lua  tools.lua
newtest/libs/android/: cdp.lua  cdp_wrapper.lua  chrome.lua  ime.lua  installer.lua  shell.lua  system.lua
newtest/libs/ios/: api_net.lua  bundie_id_provider.lua  chrome.lua  ime.lua  system.lua  wda.lua
newtest/libs/worker/: init.lua
newtest/skills/bt-schema/: SKILL.md
newtest/skills/cdp-automation/: SKILL.md
newtest/src/: test.lua  test_agent.lua  test_ai.lua  test_connect.lua  test_google.lua
playground/: package-lock.json  package.json
playground/public/css/: main.css
playground/public/js/: playground-client.js
playground/server/: app.js  index.js
playground/server/routes/: admin.js  pages.js  scenarios.js  verify.js
playground/server/scenarios/: registry.js
playground/server/scenarios/level1-direct/: click-button.html  click-button.js  toggle-checkbox.html  toggle-checkbox.js  type-search.html  type-search.js
playground/server/scenarios/level2-context/: answer-from-page.html  answer-from-page.js  fill-from-instructions.html  fill-from-instructions.js  navigate-dropdown.html  navigate-dropdown.js  select-best-value.html  select-best-value.js
playground/server/scenarios/level3-reasoning/: conditional-action.html  conditional-action.js  filter-sort.html  filter-sort.js  form-validation.html  form-validation.js  price-compare.html  price-compare.js
playground/server/scenarios/level4-planning/: account-setup.html  account-setup.js  checkout-flow.html  checkout-flow.js  data-entry.html  data-entry.js  file-management.html  file-management.js
playground/server/scenarios/level5-exception/: disappearing-elements.html  disappearing-elements.js  dynamic-price.html  dynamic-price.js  form-errors.html  form-errors.js  server-errors.html  server-errors.js
playground/server/store/: memory-store.js
playground/tests/: run_batch.sh  run_explore.sh  run_explore_batch.sh  run_scenario.sh
playground/tests/lib/: common.sh  services.sh
